--- a/css/main.css
+++ b/css/main.css
@@ -1,57 +1,85 @@
-html {
-  box-sizing: border-box;
-  font-size: 16px;
-}
-
-*, *:before, *:after {
-  box-sizing: inherit;
-}
-ol, ul {
-  list-style: none;
-}
-
-img {
-  max-width: 100%;
-  height: auto;
-}
 body{
-    background-color:#B0C4DE;
-    font-family:Arial;
+  padding: 0;
+  margin:0;    
 }
-div{
-     max-width:400px;
-    min-height:200px;
-    
-    margin:0 auto 0 auto;
+.home{
+  background-color: green;
+  min-height: 400px;
+  background-position: center;
 }
-form{
-    background:  #FFF;
-    min-height:200px;
-    padding:25px;
+ul{
+  float: right;
+  list-style-type: none;
+  margin: 30px;
+}
+ul li{
+  display: inline-block;
+}
+ul li a{
+  padding: 5px 20px;
+  color: black;
+}
+.mamamboga{
+  width: 1200px;
+  margin: 0 auto;
+
+
+}
+.intro-images{
+float: left;
+padding: 20px 20px 0;
+padding-left: 20px;
+
 }
 h1,h2,h3{
-    color:black;
-    font-family: Arial;
-}
-h1{
- font-size:40px;
-    padding-top:100px;
-    font-weight:normal; 
-}
-h3,h2{
- padding-bottom:10px;
-}
-label{
-    display:block;
-    color:  #556B2F;
-    font-size:14px;
-    margin-bottom:15px;
+  text-align: center;
 }
 
-input{
-  boarder:1px solid #cccc;
-  width:348px;
-  padding:10px;
-  font-size:15px;
-  margin-bottom:15px;
+/*
+.home{
+  background-color: #006400;*//*
 }
+.shop{
+  background-color: rgb(0,0,0,0.7);
+}
+.about{
+       background-color: violet;
+}
+.contact{
+  background-color: blue;
+}
+.nav{
+  float: left;
+}
+h1 {
+  text-align:center center;
+font-size: 20px;
+font-color:white;
+}
+.intro-images{
+  background-image: url(../images/kiosk.jpg);
+  height:120px;
+  width: 300px;
+  background-size: cover;
+  background-position: center center;
+  padding: 00px;
+  text-align: center;
+  
+} 
+ 
+.container{
+  font-size: 20px;
+  text-orientation: 40px;
+  font-color:lightblue;
+
+}
+li{
+  font-size: 30px;
+  font:right;
+}
+li{
+  line-height: 10px;
+
+  display: inline-block;
+}
+*/
